# modelbouw_Dhydro_WSBD

./: .env  .env_default  .gitignore  README.md  WBD.yml  environment.yml  environment_wbd.yml  pyproject.toml
WBD_tools/: Untitled.ipynb  __init__.py  attribute_functions.py  dwarsprofiel_xyz.py  get_data.py  o000run_process.py  process_closing.py  process_culverts.py  process_network.py  process_profiles.py  process_pumping.py  process_weir.py
WBD_tools/afwateringseenheden/: pyproject.toml  readme.md
WBD_tools/afwateringseenheden/afwateringseenheden/: __init__.py  fnames.py  lines.py  pcraster.py
WBD_tools/dtm2cat/: pyproject.toml  readme.md
WBD_tools/dtm2cat/dtm2cat/: __init__.py  copy_binaries.py  fnames.py  lines.py  logger.py  pcraster.py  rasters.py
WBD_tools/tohydamogml/: config.py  gml.py  hydamo_table.py  read_database.py  read_filegdb.py
WBD_tools/validatietool/: validatietool.py
json/: afsluitmiddel.json  attribute_functions.py  bodemval.json  brug.json  duikersifonhevel.json  dwarsprofiel.json  dwarsprofiel_benedenstrooms_legger.json  dwarsprofiel_bovenstrooms_legger.json  gemaal.json  hydroobject.json  kunstwerkopening.json  pomp.json  profiel_legger.json  regelmiddel.json  sifon.json  stuw.json
playground/: extendedgeodataframe.py
projectgebied/: dijkring34.dbf  dijkring34.sbn  dijkring34.sbx  dijkring34.shp  dijkring34.shx  dijkring35.dbf  dijkring35.shp  dijkring35.shx
scripts/: D-HyDAMO_driver.py  aanmaken_rasters.py  cursus_dsd.py
scripts/aa_of_weerijs/: 1_process_DAMO.py  2_D-HyDAMO_driver.py  3_process_resultaten.py  process_DAMO.py  uitlezen_resultaten.py
scripts/afwateringseenheden/: 00-ahn_vrt.py  00-bewerk_ahn.py  01_verwerk_watergangen.py  02-berekenen_afwateringseenheden-aangepast.py  02-berekenen_afwateringseenheden.py  03-naverwerking.py
scripts/dtm2cat/: 00-bewerk_ahn.py  01_verwerk_watergangen.py  02-berekenen_afwateringseenheden.py  02-klaarzetten_input_dtm2cat.py  03-naverwerking.py  test_pyflwdir.py
wbd_tools/: __init__.py  attribute_functions.py  case_conversions.py  clean_raster.py  fnames.py  get_data.py  get_modelgebied.py  hydamocheck.py  init_gdb.py  logger.py
wbd_tools/afwateringseenheden/: __init__.py  objects.py  pcraster.py
wbd_tools/hypothetisch/: __init__.py  afvoergolf.py
wbd_tools/json/: afsluitmiddel.json  bodemval.json  brug.json  gemaal.json  kunstwerkopening.json  meetlocatie.json  pomp.json  randvoorwaarden.json  regelmiddel.json  sifon.json  sturing.json  stuw.json  vispassage.json
wbd_tools/process_damo/: __init__.py  process_closings.py  process_culverts.py  process_management.py  process_network.py  process_profiles.py  process_pumps.py  process_weirs.py
wbd_tools/resultaten/: __init__.py  stations.py
wbd_tools/tohydamogml/: __init__.py  domeinen_damo_2_2.py  gml.py  gpkg.py  hydamo_table.py  read_database.py  validatietool.py
wbd_tools/validatietool/: ValidationRules.json  ValidationRules_original1nov2024.json  validatietool.py
