[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wbd_tools"
description = "Toolbox voor het bouwen van DHydro modellen binnen het beheergebied van waterschap Brabantse Delta"
readme = "README.md"
authors = [
    { name = "Egon Dumont", email = "e.dumont@brabantsedelta.nl" },
    { name = "Emma Poppelier", email = "e.poppelier@brabantsedelta.nl" },
    { name = "Antonella van Osnabrugge", email = "a.van.osnabrugge@brabantsedelta.nl" },
    { name = "Daniel Tollenaar", email = "daniel@d2hydro.nl" },
    
]
license = { text = "MIT" }

requires-python = ">=3.10"
dependencies = [
    "geopandas",
    "momepy",
    "contextily",
    "rioxarray",
    "rasterio==1.4.2",
    "geocube",
    "ipykernel",
    "dask",
    "networkx"
]



dynamic = ["version"]

[tool.hatch.version]
path = "WBD_tools/__init__.py"

[project.urls]
Source = "https://github.com/egondumont/modelbouw_Dhydro_WSBD/tree/master/WBD_tools"
