[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wbd_tools"
description = "Toolbox voor het bouwen van DHydro modellen binnen het beheergebied van waterschap Brabantse Delta"
readme = "README.md"
authors = [
    { name = "Egon Dumont", email = "e.dumont@brabantsedelta.nl" },
    { name = "Emma Poppelier", email = "e.poppelier@brabantsedelta.nl" },
    { name = "Antonella van Osnabrugge", email = "a.van.osnabrugge@brabantsedelta.nl" },
    { name = "Daniel Tollenaar", email = "daniel@d2hydro.nl" },
    
]
license = { text = "MIT" }

requires-python = ">=3.10"
dependencies = [
    "geopandas",
    "momepy",
    "contextily",
    "rioxarray",
    "rasterio==1.4.2",
    "geocube",
    "ipykernel",
    "dask",
    "networkx"
]



dynamic = ["version"]

[tool.hatch.version]
path = "wbd_tools/__init__.py"

[tool.hatch.build]
include = [
    "wbd_tools/json/*.json",
    "wbd_tools/**/*.py",
]

[project.urls]
Source = "https://github.com/egondumont/modelbouw_Dhydro_WSBD/tree/master/WBD_tools"


[tool.ruff]
# see https://docs.astral.sh/ruff/rules/ for meaning of rules
line-length = 119

[tool.ruff.lint]
select = ["D", "E", "F", "NPY", "PD", "C4", "I"]
ignore = ["D1", "D202", "D205", "D400", "D404", "E501", "PD002", "PD901"]
fixable = ["I", "F"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pylint]
disable = ["W1203"]